# C-C-projects

CG_2/: CG_2.sln
CG_2/CG_2/: CG_2.csproj  Form1.Designer.cs  Form1.cs  Program.cs
DKR/: DKR.sln
DKR/Debug/: DKR.ilk  test.ilk
DKR/test/: main.cpp  test.vcxproj
LexAnalizer/: CMakeLists.txt  LexAnalizer.sln
LexAnalizer/Debug/: Course_Work_SP.ilk  LexAnalizer.ilk
LexAnalizer/LexAnalizer/: CorTest.txt  DOSBox.lnk  Functions.cpp  Functions.h  Lex.txt  LexAnalizer.vcxproj  LexAnalizer.vcxproj.filters  TEST.LST  Test.asm  Test1.asm  list.txt  test.cpp
LexAnalizer/LexAnalizer/Debug/: functions.obj.enc  test.obj.enc  vc141.idb
LexAnalizer/LexAnalizer/Debug/Course_Work_SP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LexAnalizer/LexAnalizer/Debug/LexAnalizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LexAnalizer.lastbuildstate  link.command.1.tlog  link.write.1.tlog
OOP_Lab_7/: OOP_Lab_7.sln
OOP_Lab_7/Debug/: OOP_Lab_7.ilk
OOP_Lab_7/OOP_Lab_7/: OOP_Lab_7.vcxproj  OOP_Lab_7.vcxproj.filters  Source.cpp  TextClassifier.cpp  TextClassifier.h
kursova/: kursova.sln
kursova/Debug/: Alg_1.c  Alg_1.h  Alg_1t.c  Alg_2.h  Alg_2t.c  Alg_2t.h  Common.c  Common.h  KURSOVA.cbp  KURSOVA.depend  KURSOVA.layout  KURSOVA.zzz  in_out.c  kursova.ilk  main.c
kursova/kursova/: Alg_1t.h  Alg_2.c  Common.c  Common.h  Course Work.docx  KURSOVA.dev  in_out.c  in_out.h  kursova.vcxproj  kursova.vcxproj.filters  main.c
queue/: queue.sln
stack_1/: stack_1.sln
tree/: tree.sln
(+92 files in other folders)
